Snap.js drawer menu bug fixes: * return state of the snapper pane instead of state object from SnapService to animated callback function * public setSnapperVisible function in SnapService * toggle webkit scrolling off from container when omnibar is opened * calculate omnibar drawer container min position and pass it to omnibar snapper's minPosition setting * set drawer menu visible when omnibar is closed * refactored snapper event callback functions * positioned omnibar to the center of the screen
Fixed 'footer' string was accidentally replaced with 'contentNewMarginter' in some occasions in featureContainerDirective.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -416,6 +416,8 @@ footer {
 .omnibar-drawer {
   position: absolute;
   right: 0;
+  left: 0;
+  .center-horizontally;
   width: 100%;
   max-width: @one-column-grid-width;
 }
